--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -52,6 +52,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_asterisks(n, current=1):\n",
+    "    return (\n",
+    "        None\n",
+    "        if current > n\n",
+    "        else (\n",
+    "            print(\"*\" * current)\n",
+    "            or print_asterisks(n, current + 1)\n",
+    "            or (current != n and print(\"*\" * current))\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    max_stars = int(input(\"Enter the number of asterisks of the maximum line: \"))\n",
+    "    print_asterisks(max_stars)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -76,6 +117,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of vowels in the string is: 14\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_vowel(char):\n",
+    "    return char.lower() in \"aeiou\"\n",
+    "\n",
+    "\n",
+    "def count_vowels(s):\n",
+    "    return 0 if not s else (1 if is_vowel(s[0]) else 0) + count_vowels(s[1:])\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    user_input = input(\"Enter a string: \")\n",
+    "    num_vowels = count_vowels(user_input)\n",
+    "    print(f\"The number of vowels in the string is: {num_vowels}\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -97,6 +170,66 @@
     "*java.io.File* class and the week 5 examples.\n",
     "\n",
     "(4 marks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entries found with filename '__init__.py':\n",
+      "./python/exercise2/__init__.py\n",
+      "./python/exercise3/__init__.py\n",
+      "./python/exercise1/__init__.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "\n",
+    "def find_files_by_name(directory_path, target_filename):\n",
+    "    found_files = []\n",
+    "\n",
+    "    if not os.path.exists(directory_path):\n",
+    "        return found_files\n",
+    "\n",
+    "    if os.path.isfile(directory_path):\n",
+    "        if os.path.basename(directory_path) == target_filename:\n",
+    "            found_files.append(directory_path)\n",
+    "        return found_files\n",
+    "\n",
+    "    for item in os.listdir(directory_path):\n",
+    "        full_item_path = os.path.join(directory_path, item)\n",
+    "\n",
+    "        if os.path.isdir(full_item_path):\n",
+    "            found_files.extend(find_files_by_name(full_item_path, target_filename))\n",
+    "\n",
+    "        elif os.path.isfile(full_item_path) and item == target_filename:\n",
+    "            found_files.append(full_item_path)\n",
+    "\n",
+    "    return found_files\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    DIRECTORY_PATH = \".\"\n",
+    "    TARGET_FILENAME = \"__init__.py\"\n",
+    "\n",
+    "    search_results = find_files_by_name(DIRECTORY_PATH, TARGET_FILENAME)\n",
+    "    if search_results:\n",
+    "        print(f\"Entries found with filename '{TARGET_FILENAME}':\")\n",
+    "        for file_path in search_results:\n",
+    "            print(file_path)\n",
+    "    else:\n",
+    "        print(f\"No entries found with filename '{TARGET_FILENAME}'.\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   },
   {
@@ -178,8 +311,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
