Add answers for question set 1

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -21,16 +21,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 1\n",
-    "\n",
+    "## Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**If your first name starts with a letter from A-J inclusively:**\n",
     "\n",
     "Create a **recursive algorithm** to compute the **product of two\n",
     "positive integers**, *m* and *n*, using only addition and subtraction.\n",
     "Implement the Java or Python code. **Hint:** You need subtraction to\n",
     "count down from *m* or *n* and addition to do the arithmetic needed to\n",
-    "get the right answer. Check *linearSum* method from Week 5 examples.\n",
+    "get the right answer. Check *linearSum* method from Week 5 examples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "def compute_product(m, n):\n",
+    "    return 0 if n == 0 else m + compute_product(m, n - 1)\n",
     "\n",
+    "\n",
+    "def main():\n",
+    "    m = 4\n",
+    "    n = 2\n",
+    "    result = compute_product(m, n)\n",
+    "    print(result)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**If your first name starts with a letter from K-Z inclusively:**\n",
     "\n",
     "Write a recursive method to produce the following pattern:\n",
@@ -105,8 +144,41 @@
     "palindromes include 'racecar' and 'mom'. Test the method by asking the\n",
     "user to provide string entries to be checked. **Hint:** Check the\n",
     "equality of the first and last characters and recur (but be careful to\n",
-    "return the correct value for both odd and even-length strings).\n",
+    "return the correct value for both odd and even-length strings)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_palindrome(s):\n",
+    "    s = \"\".join(char for char in s if char.isalnum()).lower()\n",
+    "    return len(s) <= 1 or (s[0] == s[-1] and is_palindrome(s[1:-1]))\n",
     "\n",
+    "\n",
+    "def main():\n",
+    "    s = input(\"Provide string entries to be checked: \").strip()\n",
+    "    print(is_palindrome(s))\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**If your first name starts with a letter from K-Z inclusively:**\n",
     "\n",
     "Write **a recursive method** to that returns the number of vowels in a\n",
@@ -159,8 +231,57 @@
     "Write **a recursive method** that takes a string as argument and\n",
     "determines if the string has more vowels than consonants. Test the\n",
     "method by asking the user to enter a string. **Hint**: Write your\n",
-    "recursive method to first count vowels and consonants.\n",
+    "recursive method to first count vowels and consonants."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_vowel(char):\n",
+    "    return char.lower() in \"aeiou\"\n",
     "\n",
+    "\n",
+    "def count_vowels(s):\n",
+    "    return 0 if not s else (1 if is_vowel(s[0]) else 0) + count_vowels(s[1:])\n",
+    "\n",
+    "\n",
+    "def count_consonants(s):\n",
+    "    return (\n",
+    "        0\n",
+    "        if not s\n",
+    "        else (1 if s[0].isalpha() and not is_vowel(s[0]) else 0)\n",
+    "        + count_consonants(s[1:])\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def has_more_vowels_than_consonants(s):\n",
+    "    return count_vowels(s) > count_consonants(s)\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    user_input = input(\"Enter a string: \")\n",
+    "    print(has_more_vowels_than_consonants(user_input))\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**If your first name starts with a letter from K-Z inclusively:**\n",
     "\n",
     "Implement a **recursive method** that takes *(path, filename)* as\n",
