--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -337,16 +337,16 @@
     "\n",
     "\n",
     "def main():\n",
-    "    DIRECTORY_PATH = \".\"\n",
-    "    TARGET_FILENAME = \"__init__.py\"\n",
+    "    directory = \".\"\n",
+    "    filename = \"__init__.py\"\n",
     "\n",
-    "    search_results = find_files_by_name(DIRECTORY_PATH, TARGET_FILENAME)\n",
+    "    search_results = find_files_by_name(directory, filename)\n",
     "    if search_results:\n",
-    "        print(f\"Entries found with filename '{TARGET_FILENAME}':\")\n",
+    "        print(f\"Entries found with filename '{filename}':\")\n",
     "        for file_path in search_results:\n",
     "            print(file_path)\n",
     "    else:\n",
-    "        print(f\"No entries found with filename '{TARGET_FILENAME}'.\")\n",
+    "        print(f\"No entries found with filename '{filename}'.\")\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
