--- a/src/notebook.ipynb
+++ b/src/notebook.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,16 @@
    ],
    "source": [
     "def compute_product(m, n):\n",
-    "    return 0 if n == 0 else m + compute_product(m, n - 1)\n",
+    "    \"\"\"\n",
+    "    Computes the product of two positive integers using addition and recursion.\n",
+    "    \"\"\"\n",
+    "    return (\n",
+    "        # Base case: If n is 0, the product is 0\n",
+    "        0\n",
+    "        if n == 0\n",
+    "        # Recursive case: Add m to the product of m and (n-1)\n",
+    "        else m + compute_product(m, n - 1)\n",
+    "    )\n",
     "\n",
     "\n",
     "def main():\n",
@@ -92,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -111,12 +120,20 @@
    ],
    "source": [
     "def print_asterisks(n, current=1):\n",
+    "    \"\"\"\n",
+    "    Prints a pattern of asterisks using recursion.\n",
+    "    \"\"\"\n",
     "    return (\n",
+    "        # Base case: If the current line number exceeds n, terminate the recursion\n",
     "        None\n",
     "        if current > n\n",
+    "        # Recursive case:\n",
     "        else (\n",
+    "            # Print asterisks for the current line\n",
     "            print(\"*\" * current)\n",
+    "            # Recursive call to print the next line\n",
     "            or print_asterisks(n, current + 1)\n",
+    "            # Print the current line again after the recursion\n",
     "            or (current != n and print(\"*\" * current))\n",
     "        )\n",
     "    )\n",
@@ -149,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -162,8 +179,19 @@
    ],
    "source": [
     "def is_palindrome(s):\n",
+    "    \"\"\"\n",
+    "    Checks if a given string is a palindrome using recursion.\n",
+    "    \"\"\"\n",
+    "    # Remove non-alphanumeric characters and  convert all letters to lowercase\n",
     "    s = \"\".join(char for char in s if char.isalnum()).lower()\n",
-    "    return len(s) <= 1 or (s[0] == s[-1] and is_palindrome(s[1:-1]))\n",
+    "\n",
+    "    return (\n",
+    "        # Base case: If the string length is 1 or 0, it's a palindrome\n",
+    "        len(s) <= 1\n",
+    "        or\n",
+    "        # Recursive case: Check if the first and last characters of the string are the same\n",
+    "        (s[0] == s[-1] and is_palindrome(s[1:-1]))\n",
+    "    )\n",
     "\n",
     "\n",
     "def main():\n",
@@ -190,24 +218,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of vowels in the string is: 14\n"
+      "The number of vowels in the string is: 12\n"
      ]
     }
    ],
    "source": [
     "def is_vowel(char):\n",
+    "    \"\"\"\n",
+    "    Checks if the given character is a vowel (a, e, i, o, u).\n",
+    "    \"\"\"\n",
+    "    # Convert the character to lowercase and check if it is in the string \"aeiou\"\n",
     "    return char.lower() in \"aeiou\"\n",
     "\n",
     "\n",
     "def count_vowels(s):\n",
-    "    return 0 if not s else (1 if is_vowel(s[0]) else 0) + count_vowels(s[1:])\n",
+    "    \"\"\"\n",
+    "    Counts the number of vowels in a given string using recursion.\n",
+    "    \"\"\"\n",
+    "    return (\n",
+    "        # Base case: if the string is empty, return 0 (no vowels in an empty string)\n",
+    "        0\n",
+    "        if not s\n",
+    "        # Recursive case: check the first character of the string\n",
+    "        else (\n",
+    "            # Add 1 if the character is a vowel\n",
+    "            1\n",
+    "            if is_vowel(s[0])\n",
+    "            else 0\n",
+    "        )\n",
+    "        +\n",
+    "        # Call the function recursively on the rest of the string (s[1:])\n",
+    "        count_vowels(s[1:])\n",
+    "    )\n",
     "\n",
     "\n",
     "def main():\n",
@@ -236,36 +285,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "True\n"
      ]
     }
    ],
    "source": [
     "def is_vowel(char):\n",
+    "    \"\"\"\n",
+    "    Checks if the given character is a vowel (a, e, i, o, u).\n",
+    "    \"\"\"\n",
+    "    # Convert the character to lowercase and check if it is in the string \"aeiou\"\n",
     "    return char.lower() in \"aeiou\"\n",
     "\n",
     "\n",
     "def count_vowels(s):\n",
-    "    return 0 if not s else (1 if is_vowel(s[0]) else 0) + count_vowels(s[1:])\n",
+    "    \"\"\"\n",
+    "    Counts the number of vowels in a given string using recursion.\n",
+    "    \"\"\"\n",
+    "    return (\n",
+    "        # Base case: if the string is empty, return 0 (no vowels in an empty string)\n",
+    "        0\n",
+    "        if not s\n",
+    "        # Recursive case: check the first character of the string\n",
+    "        else (\n",
+    "            # Add 1 if the character is a vowel\n",
+    "            1\n",
+    "            if is_vowel(s[0])\n",
+    "            else 0\n",
+    "        )\n",
+    "        +\n",
+    "        # Call the function recursively on the rest of the string (s[1:])\n",
+    "        count_vowels(s[1:])\n",
+    "    )\n",
     "\n",
     "\n",
     "def count_consonants(s):\n",
+    "    \"\"\"\n",
+    "    Counts the number of consonants in a given string using recursion.\n",
+    "    \"\"\"\n",
     "    return (\n",
+    "        # Base case: If the string is empty, return 0\n",
     "        0\n",
     "        if not s\n",
-    "        else (1 if s[0].isalpha() and not is_vowel(s[0]) else 0)\n",
-    "        + count_consonants(s[1:])\n",
+    "        # Recursive case:\n",
+    "        else (\n",
+    "            # Add 1 if the character is a consonant\n",
+    "            1\n",
+    "            if s[0].isalpha() and not is_vowel(s[0])\n",
+    "            else 0\n",
+    "        )\n",
+    "        +\n",
+    "        # Counting vowels in the rest of the string\n",
+    "        count_consonants(s[1:])\n",
     "    )\n",
     "\n",
     "\n",
     "def has_more_vowels_than_consonants(s):\n",
+    "    \"\"\"\n",
+    "    Checks if a given string has more vowels than consonants.\n",
+    "    \"\"\"\n",
+    "    # Compare the number of vowels and consonants in the string\n",
     "    return count_vowels(s) > count_consonants(s)\n",
     "\n",
     "\n",
@@ -295,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -303,9 +389,9 @@
      "output_type": "stream",
      "text": [
       "Entries found with filename '__init__.py':\n",
-      "./python/exercise2/__init__.py\n",
-      "./python/exercise3/__init__.py\n",
-      "./python/exercise1/__init__.py\n"
+      "./exercise3/__init__.py\n",
+      "./exercise1/__init__.py\n",
+      "./exercise2/__init__.py\n"
      ]
     }
    ],
